--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">千方停车</string>
     <string name="app_splash">启动页</string>
+
+
+    <string name="navi_tab_title">选项页</string>
+
     <string name="title_home">首页</string>
     <string name="title_near">附近</string>
     <string name="title_mine">我的</string>
